<resources>
    <string name="app_name">BeeNews</string>

    <!--tabs-->
    <string name="menu_feedback">用户反馈</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_mode">切换模式</string>

    <!--tabs 简便用 first second third-->
    <string name="main_tab_first">新闻</string>
    <string name="main_tab_second">热点</string>
    <string name="main_tab_third">我</string>

    <!--侧滑导航-->
    <string name="exit_app_title">蜂学监测系统</string>
    <string name="exit_app_hint">你确定要退出吗?</string>
    <string name="exit_app_positive">是的</string>
    <string name="exit_app_negative">按错了</string>

    <!--首页ActionBarDrawerToggle-->
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <!-- list 到了最底部 没有新数据了-->
    <string name="list_more_data">更新了0条数据~</string>


    <!-- list 到了最底部 没有新数据了-->
    <string name="list_no_data">没有新的内容了哦~</string>

    <!-- list 到了最底部 没有新数据了-->

    <!-- list 到了最底部 没有新数据了-->
    <string name="save_net_mode">save_net_mode</string>


    <!--首页搜索框-->
    <string name="action_search_title">选择搜索内容</string>
    <string-array name="search_content_main">
        <item>标题</item>
        <item>日期</item>
    </string-array>
    <string name="search_positive_btn_main">OK</string>
    <string name="title_activity_setting">设置</string>


    <string name="basic_setting">基本设置</string>
    <string name="select_system_title">蜜蜂病虫害查询系统</string>
    <string name="monitor_system_title">蜜蜂病虫害监测系统</string>
    <string name="estimate_system_title">蜜蜂病虫害风险评估预警系统</string>
    <string name="system_title">系统</string>
    <string name="information">资讯</string>
    <string name="site_title">试验站</string>
    <string name="readTime">"浏览: "</string>
    <string name="search">search</string>
</resources>
