<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/information" />
        <item
            android:id="@+id/nav_system"
            android:icon="@drawable/icn_system"
            android:title="@string/system_title" />
        <item
            android:id="@+id/nav_site"
            android:icon="@drawable/site"
            android:title="@string/site_title" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:title="设置" />
        <item
            android:id="@+id/nav_us"
            android:title="关于我们" />
    </group>
</menu>
