<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!--Toolbar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_system"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/primary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="蜜蜂监测管理系统"
            android:textColor="@color/white"
            android:textSize="30dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/moni_btn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/primary"
        android:text="@string/monitor_system_title"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/primary"
        android:text="@string/select_system_title"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/eval_btn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/primary"
        android:text="@string/estimate_system_title"
        android:textColor="@color/white" />
</LinearLayout>